--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     {
         "@context": "https://schema.org",
         "@type": "Website",
-        "url": "https://id-game-validator.vercel.app",
-        "name": "ID Game Validator",
-        "description": "ID Game Validator adalah website untuk memvalidasi ID game dan zona pada berbagai platform game.",
+        "url": "https://neetvalidator.vercel.app/",
+        "name": "NEET Validator",
+        "description": "NEET Validator adalah website untuk memvalidasi ID game dan zona pada berbagai platform game.",
         "author": {
             "@type": "Person",
-            "name": "Okki Dwi Drive"
+            "name": "NEET Validator"
         }
     }
     </script>
@@ -713,7 +713,7 @@
     </div>
 
     <div class="container">
-        <h1>ID Game Validator</h1>
+        <h1>NEET Validator</h1>
         <p>
             <i class="material-icons">event</i> Update 27-03-2025 &nbsp;&nbsp;|&nbsp;
             <i class="material-icons">update</i> v1.6
@@ -1104,3 +1104,4 @@
     </script>
 
 </body></html>
+
