--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ID Game Validator - Validasi ID Game dan Zona</title>
+    <title>NEET Validator - Validasi ID Game dan Zona</title>
     <meta name="description" content="ID Game Validator adalah website untuk memvalidasi ID game dan zona pada berbagai platform game.">
     <meta name="keywords" content="game, validator, ID game, ID zona, cek ID game, validasi game">
     <meta name="author" content="Okki Dwi Drive">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://id-game-validator.vercel.app">
+    <link rel="canonical" href="https://neetvalidator.vercel.app">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="../assets/favicon/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/svg+xml" href="../assets/favicon/favicon.svg">
     <link rel="shortcut icon" href="../assets/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
-    <meta name="apple-mobile-web-app-title" content="ID Game Validator">
+    <meta name="apple-mobile-web-app-title" content="NEET Validator">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://id-game-validator.vercel.app">
-    <meta property="og:title" content="ID Game Validator">
+    <meta property="og:url" content="https://neetvalidator.vercel.app">
+    <meta property="og:title" content="NEET Validator">
     <meta property="og:description" content="ID Game Validator adalah website untuk memvalidasi ID game dan zona pada berbagai platform game.">
-    <meta property="og:image" content="https://id-game-validator.vercel.app/path/to/og-image.png">
+    <meta property="og:image" content="https://neetvalidator.vercel.app/path/to/og-image.png">
 
     <!-- Twitter / X -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://id-game-validator.vercel.app">
-    <meta property="twitter:title" content="ID Game Validator">
-    <meta property="twitter:description" content="ID Game Validator website alat untuk memvalidasi ID game dan zona pada berbagai platform game.">
-    <meta property="twitter:image" content="https://id-game-validator.vercel.app/path/to/twitter-image.png">
+    <meta property="twitter:url" content="https://neetvalidator.vercel.app">
+    <meta property="twitter:title" content="NEET Validator">
+    <meta property="twitter:description" content="NEET Validator website alat untuk memvalidasi ID game dan zona pada berbagai platform game.">
+    <meta property="twitter:image" content="https://neetvalidator.vercel.app/path/to/twitter-image.png">
 
     <!-- Manifest -->
     <link rel="manifest" href="../assets/manifest/site.webmanifest">
@@ -687,15 +687,15 @@
 <body data-theme="light">
     <div class="header">
         <div class="logo-title">
-            <a href="https://id-game-validator.vercel.app" style="text-decoration: none; display: flex; align-items: center;">
+            <a href="https://neetvalidator.vercel.app" style="text-decoration: none; display: flex; align-items: center;">
                 <img src="https://raw.githubusercontent.com/okkidwi/okki-dwi-drive-index/master/images/logo-okki-dwi-drive.png" alt="Logo">
                 <span style="font-family: 'Poppins', sans-serif;">Okki Dwi <span class="pill" style="border-radius: 8px;">Drive</span></span>
             </a>
         </div>
         <div class="header-buttons">
-            <a href="https://lapakokki.biz.id" target="_blank" class="header-button" aria-label="Lapak Okki - Store">
+            <a href="https://neetstore.id" target="_blank" class="header-button" aria-label="neetstore">
                     <i class="material-icons">language</i>
-                <span>Lapak Okki - Store</span>
+                <span>NEETstore</span>
             </a>
             <a href="https://www.facebook.com/share/p/1A5fYsaRQH" target="_blank" class="header-button" aria-label="Lapor Bug">
                     <i class="material-icons">bug_report</i>
@@ -1104,4 +1104,5 @@
     </script>
 
 </body></html>
+
 
