--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
         <div class="logo-title">
             <a href="https://neetvalidator.vercel.app" style="text-decoration: none; display: flex; align-items: center;">
                 <img src="https://raw.githubusercontent.com/okkidwi/okki-dwi-drive-index/master/images/logo-okki-dwi-drive.png" alt="Logo">
-                <span style="font-family: 'Poppins', sans-serif;">Okki Dwi <span class="pill" style="border-radius: 8px;">Drive</span></span>
+                <span style="font-family: 'Poppins', sans-serif;">NEET<span class="pill" style="border-radius: 8px;">Validator</span></span>
             </a>
         </div>
         <div class="header-buttons">
@@ -1104,5 +1104,6 @@
     </script>
 
 </body></html>
+
 
 
